migrated to javassist and java 17